css/style.css
/*

reset

*/

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family:  'Helvetica Neue', Helvetica, Arial, sans-serif;
    
}

/*
common
*/

a {
    color: #ffffff;
    text-decoration: none;
    font-weight: bold;

}

img {
    width: 447px;
}

.sconto{
    padding: 8px 8px;
    background-color: red;
    color: #ffffff;
    position: absolute;
    bottom: 100px;
    left: 0px;
}

.sosten {
    padding: 8px 8px;
    background-color: green;
    color: #ffffff;
    position: absolute;
    bottom: 100px;
    left: 55px;

}

.sosten-b {
    padding: 8px 8px;
    background-color: green;
    color: #ffffff;
    position: absolute;
    bottom: 100px;

}

.red {
    color: red;
}

.line {
    text-decoration: line-through;
  }

/*

header

*/

.header-container{
    background-color: #ff6900;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 310px;
    margin-bottom: 100px;
    /*position: fixed;*/
    width: 100%;

    
}

.logo {
    width: 135px;
}

/*

main

*/

.main-container {
    /*background-color: aqua;*/
    width: 1380px;
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    padding: 15px 0;
    gap: 20px;
    

}



.card {
    width: calc((100% - 40px) / 3);
    position: relative;
    display: inline-block;
}

.card .sopra {
    display: none;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 1;
}

.card:hover .sopra {
    display: inline;
}

.heart {
    font-size: 35px;
    padding: 12px 12px;
    background-color: #ffffff;
    position: absolute;
    right: 0;
    top: 9px;
    z-index: 2;
}

.tipologia{
    position: relative;
    z-index: 2;
}

